# aws-rekognition-face-liveness-detection

./: README.md
android/: aws-face-liveness.jks  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/aitsuki/android/awsfaceliveness/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aitsuki/android/awsfaceliveness/: AppNavGraph.kt  AppState.kt  MainActivity.kt
android/app/src/main/java/com/aitsuki/android/awsfaceliveness/data/: Repository.kt
android/app/src/main/java/com/aitsuki/android/awsfaceliveness/model/: Credentials.kt  LivenessResult.kt  LivenessSession.kt
android/app/src/main/java/com/aitsuki/android/awsfaceliveness/screen/: DetectionScreen.kt  StartScreen.kt
android/app/src/main/java/com/aitsuki/android/awsfaceliveness/ui/component/: Base64Image.kt
android/app/src/main/java/com/aitsuki/android/awsfaceliveness/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/aitsuki/android/awsfaceliveness/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml
server/src/: main.rs
