[package]
name = "aws-rekognition-face-liveness-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.8"
aws-sdk-rekognition = "1.17.0"
aws-sdk-sts = "1.16.0"
aws-smithy-runtime-api = { version = "1.2.0", features = ["client"] }
aws-smithy-types = "1.1.8"
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
axum = "0.7.4"
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
